--- a/roots.html
+++ b/roots.html
@@ -1,1 +1,20 @@
-document.Write("Hello");
+<!Doctype html>
+<!--roots.html a document for roots.js-->
+<html lang = "en">
+  <head>
+    <title>roots.html</title>
+    <meta charset = "utf-8"/>
+  </head>
+
+  <body>
+    <script type = "text/javascript" src = roots.js>
+    </script>
+  </body>
+</html>
+var a = prompt("What is the value of 'a'?\n, "");
+
+//compute the square root and denom of the result
+var root_parts = Math.sqrt(b*b - 4.0 *a * c);
+
+//show output
+document.write("The first root is: ", "cat");
